fix flex gap safari

--- a/src/components/modules/Card/index.module.css
+++ b/src/components/modules/Card/index.module.css
@@ -3,6 +3,7 @@
 	height: 450px;
 	box-shadow: 0px 0px 20px 2px rgba(0,0,0,0.2);
 	overflow: hidden;
+	margin: 0.75rem;
 }
 @media only screen and (max-width: 1280px) {
 	.card {
