--- a/src/components/pages/Recipes/index.module.css
+++ b/src/components/pages/Recipes/index.module.css
@@ -12,7 +12,6 @@
 .list {
 	display: flex;
 	flex-wrap: wrap;
-	gap: 1.5rem;
 	align-items: stretch;
 	margin-top: 2rem;
 }
